# AppCoreMT

./: CMakeLists.txt  Doxyfile  README.md
samples/: CMakeLists.txt
samples/src/: main.cpp
samples/src/00-TaskChain/: main.cpp
samples/src/01-DLL_Loader/: dll.cpp  main.cpp
samples/src/02-Multi_Threaded_App/: main.cpp
scripts/: new_cpp_src.py
src/: AppCoreMT.cpp  AppCoreMT.hpp  AppTask.cpp  AppTask.hpp  AppWorker.cpp  AppWorker.hpp  BranchNode.cpp  BranchNode.hpp  DynamicLibLoader.hpp  InterfaceTest.cpp  Node.cpp  Node.hpp  ResourceProvisioner.cpp  ResourceProvisioner.hpp  SafeLock.cpp  SafeLock.hpp  SafeVar.cpp  SafeVar.hpp  SharedLibLoader.h  TaskChain.cpp  TaskChain.hpp  TaskNode.cpp  TaskNode.hpp  Version.hpp  version.h.in
src/interfaces/: IPlugin.hpp
src/tests/: CMakeLists.txt
starter_code/SDL2_GL/src/: ActionMap.cpp  ActionMap.hpp  Alias.hpp  Camera.cpp  Camera.hpp  Component.cpp  Component.hpp  Drawable.hpp  Entity.cpp  Entity.hpp  FloatRect.h  ObjectPool.hpp  RenderShapes.cpp  RenderShapes.hpp  Shader.cpp  Shader.hpp  Transform.cpp  Transform.hpp  main.cpp  util.cpp  util.hpp
starter_code/SDL2_GL/src/components/: TransformComponent.cpp  TransformComponent.hpp
tests/: CMakeLists.txt
